Wrote some more

--- a/introduction.Rmd
+++ b/introduction.Rmd
@@ -18,9 +18,9 @@ Yet, despite the primacy of vision, our interaction with the natural world exten
 
 Naturally, statisticians would eventually come to exploit this connection between action and perception as well. In the latter half of the twentieth century, the development of computer graphics and interactive data visualization transformed the idea of "interrogating a chart" from a mere turn of phrase into tangible reality. Suddenly, users could directly manipulate the visual representation of the data in real time, uncovering new insights with a keystroke or a mouse click.
 
-The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards, and data-science-adjacent developer ecosystems are flush with software for building and deploying interactive visualizations. Thus, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
+The power of interactive data visualization quickly established it as one of the most popular ways of presenting data. Today, interactive graphics make frequent appearance in online news articles, on government websites, and in commercial dashboards. Likewise, data-science-adjacent developer ecosystems are flush with software for building and deploying interactive visualizations. Thus, given its ubiquity, it may seem as though interactive data visualization is a "solved problem".
 
-Yet, a number of issues surrounding the use and understanding of interactive visualizations remain. While interactive visualizations are indeed popular in large organizations, individual analysts rarely integrate them into their workflows [see e.g. @batch2017]. Further, despite years of research and development, only a small fraction of the more sophisticated interactive features make it into the widely available software (see Section \@ref(background)). Finally, a core underlying issue that is yet to be resolved is that of data pipelines: how do we go about modeling the process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
+Yet, a number of issues surrounding the use and understanding of interactive visualizations remain. While interactive visualizations are indeed popular in large organizations, individual analysts rarely integrate them into their workflows [see e.g. @batch2017]. Further, despite years of research and development, only a small fraction of the more sophisticated interactive features make it into the widely available software (see Section \@ref(background)). Finally, a core underlying issue which is yet to be resolved is that of data pipelines: how do we go about modeling the process of transforming raw data into something that can be interactively visualized, in a simple and efficient manner [see e.g. @wickham2009; @vanderplas2020]?
 
 In this thesis, I explore the challenges that come up when developing interactive data visualization systems. A recurring theme will be that plots, despite being visual entities composed of geometric objects, are more than just pictures. Instead, they possess a significant amount of implicit, algebraic structure which dictates how they can be created and manipulated. This underlying structure becomes particularly critical when interaction is introduced.
 
@@ -34,11 +34,11 @@ By focusing on this underlying algebraic foundation, I build upon the work of Le
 
 What makes some combinations of graphics and statistics meaningful, while others degenerate or bizarre? I believe that answering this question is essential for building coherent data visualization systems, particularly ones involving interaction. Arguably, statistics may be a somewhat overlooked component of the GoG model^[See also the following quote: "I have tried to build the argument, except for the statistical methods in Chapter 7, from elementary definitions.", pp. 10 of the first-edition preface.]. Yet, I contend that, when developing interactive data visualizations, grappling with the properties of statistics underlying our plots is just as essential as understanding any other component.
 
-The main thrust of my argument is this: what we can *do* with a graphic is fundamentally determined what the graphic *is*. Like geometric objects and scales, summary statistics are essential components of plots. When we consider all these together, distinct patterns emerge. Some types of plots exhibit a special congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other plots break this congruence, making certain interactive features brittle or difficult to implement. I explore this congruence and lack thereof throughout this thesis. Further, to describe it formally, I propose a simple model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. My application of these concepts extends beyond the GoG [@wilkinson2012]. Specifically, in contrast to the GoG approach which treats data, statistics, and graphics as entirely independent, modular components, I propose an alternative, compositional model which focuses on preserving key mathematical properties.
+The main thrust of my argument is this: what we can *do* with a graphic is fundamentally determined what the graphic *is*. Just like geometric objects and scales, summary statistics are essential components of plots. When we consider all these together, distinct patterns emerge. Some types of plots exhibit a special congruence between data, summary statistics, and visuals, which ensures predictable behavior under interaction. Other plots break this congruence, making certain interactive features brittle or difficult to implement. I explore this congruence and lack thereof throughout this thesis. Further, to describe it formally, I propose a simple model leveraging some fundamental algebraic concepts from category theory [see e.g. @fong2019]. My application of these concepts extends beyond the GoG [@wilkinson2012]. Specifically, in contrast to the GoG approach which treats data, statistics, and graphics as entirely independent, modular components, I propose an alternative, compositional model which focuses on preserving key mathematical properties.
 
 Finally, since interactive data visualization is first and foremost an applied discipline, all this theoretical work would be meaningless if it did not lead to practical, actionable insights. Therefore, to validate and refine these theoretical findings, I also develop an original open-source interactive data visualization library, `plotscaper` (https://github.com/bartonicek/plotscaper). Consequently, parts of this thesis are dedicated to the design and architecture of this system, as well as its application to real-world data. Throughout these sections, I repeatedly explore and elaborate on the links between the underlying mathematics and the practical concerns that arise when building interactive data visualization systems. 
 
-Ultimately, I contend that, to build truly general and efficient interactive data visualization systems, we need to take the algebraic relationships underlying plots into account. Only by precisely describing what a plot *is* can we begin to reason about what we can *do* with it.
+Ultimately, I contend that, in order to build truly general and efficient interactive data visualization systems, we need to take the algebraic relationships underlying plots into account. Only by precisely describing what a plot *is* can we begin to reason about what we can *do* with it.
 
 #### Structure of the thesis
 
