--- a/system.Rmd
+++ b/system.Rmd
@@ -439,7 +439,7 @@ barplot_segment_data <- encode(
 
 The `encoded_object_data` data set represents the whole barplot bars and may be used for training scales and collision detection, while the `encoded_segment_data` data set represents the more granular bar segments, which are actually rendered. Notice how the `stack` function is only applied to the segment data, since this represents the finest level of partitioning.
 
-In some way, this is similar to how data variables are mapped to aesthetics in `ggplot2` using the `aes()` function [@wickham2016]. However, as discussed in Section \@ref(foo), an important difference is that in `ggplot2`, the aesthetic mapping occurs *before* the variables are summarized, making the data dependencies more explicit and also making certain interactive operations more efficient. Specifically, separating the summary and encoding step enables simple and efficient representation switching. For instance, to turn the barplot into a spineplot, we could use the same summary data and simply swap the encoding scheme:
+In some way, this is similar to how data variables are mapped to aesthetics in `ggplot2` using the `aes()` function [@wickham2016]. However, as discussed in Section \@ref(model-pipeline), an important difference is that in `ggplot2`, the aesthetic mapping occurs *before* the variables are summarized, making the data dependencies more explicit and also making certain interactive operations more efficient. Specifically, separating the summary and encoding step enables simple and efficient representation switching. For instance, to turn the barplot into a spineplot, we could use the same summary data and simply swap the encoding scheme:
 
 ```{r}
 #| eval: false
@@ -497,7 +497,8 @@ These central ideas of OOP are: abstraction, encapsulation, polymorphism, and in
 
 It is also important to briefly mention the model-view-controller (MVC) architecture [see e.g. @krasner1988; @leff2001]. This popular OOP pattern divides the application into three parts, where the model manages the application's state, the view represents it graphically, and the controller orchestrates updates between the two as well as handles user input. The aim of this pattern is to encourage separation of concerns and reusability, such that, for example, one model may be displayed by several views [for example, the same data may be displayed as a graph and a table, see @krasner1988].   
 
-Object-oriented programming (OOP) has seen widespread adoption, especially in GUIs, which might suggest it as a natural fit for interactive data visualization systems [see also @wilkinson2012]. Furthermore, the MVC architecture has been used in interactive data visualization [see e.g. @xie2014], and OOP's claimed benefits of continuity and extensibility appear highly attractive for library design. However, more recently, traditional OOP style has also faced some criticisms. First, while encouraging extensibility and reducing complexity via abstraction, encapsulation, and polymorphism seems attractive,  real-world OOP implementations do not always achieve these goals. For instance, a common OOP practice is for objects to communicate by sending pointers to each other. This however breaks encapsulation and causes objects to become entangled, creating "incidental data structures" [@hickey2011; @parent2015; @will2016]. Further, by its nature, OOP heavily encourages abstraction. While good abstractions are undeniably useful, they take long time to develop. Poor abstractions tend to appear first, and, once in place, are difficult to extricate [@meyer1997]. This can lead to overly complex and bloated systems [@vaneerd2024]. Finally, OOP can also negatively impact performance. Objects frequently hold more data than any single method requires, and, to support runtime polymorphism, they must store pointers to virtual method tables. Consequently, arrays of objects almost always take up more memory than equivalent arrays of plain values, resulting in more cache misses and decreased performance [@acton2014].   
+Object-oriented programming (OOP) has seen widespread adoption, especially in GUIs, which might suggest it as a natural fit for interactive data visualization systems [see also @wilkinson2012]. Furthermore, the MVC architecture has been used in interactive data visualization [see e.g. @xie2014], and OOP's claimed benefits of continuity and extensibility appear highly attractive for library design. However, more recently, traditional OOP style has also faced some criticisms. First, while encouraging extensibility and reducing complexity via abstraction, encapsulation, and polymorphism seems attractive,  real-world OOP implementations do not always achieve these goals. For instance, a common OOP practice is for objects to communicate by sending pointers to each other. This however breaks encapsulation and causes objects to become entangled, creating "incidental data structures" [@hickey2011; @parent2015; @will2016]. Further, by its nature, OOP heavily encourages abstraction. While good abstractions are undeniably useful, they take long time to develop. Poor abstractions tend to appear first, and, once in place, are difficult to extricate [@meyer1997]. This can lead to overly complex and bloated systems [@vaneerd2024]. Finally, OOP can also negatively impact performance. Objects frequently hold more data than any single method requires, and, to support runtime polymorphism, they must store pointers to virtual method tables. Consequently, arrays of objects almost always take up more memory than equivalent arrays of plain values, resulting in more cache misses and decreased performance [@acton2014].  
+
 #### Data-oriented programming {#dop}
 
 Data-oriented programming (DOP) is a newer and less well-known programming paradigm. In fact, due to its recency, the term is used in multiple ways across different contexts, however, there are primarily two broad sets of ideas it encompasses. First, DOP sometimes refers to a more abstract paradigm, concerned with structure and organization of code. Inspired by the Clojure style of programming [@hickey2011; @hickey2018; @sharvit2022; @parlog2024], it also shares some similarities with the generic programming paradigm and value semantics popularized by Alexander Stepanov and popular the C++ community [@stepanov2009; @stepanov2013; @parent2013; @parent2015; @parent2018; @vaneerd2023; there are even some direct ties, see @vaneerd2024]. Second, DOP (or "data oriented design", DOD) also sometimes refers to a more concrete set of optimization techniques and ideas. Originating in video-game development, these primarily tend to focus on low-level details like memory layout and CPU cache line utilization [@acton2014; @bayliss2022; @kelley2023; @nikolov2018; @fabian2018]. Interestingly, despite their distinct uses, both interpretations of "data-oriented programming" converge on many similar ideas about the structure and organization of computer programs. As such, I believe it is justified to discuss them here as a single paradigm.
