--- a/goals.Rmd
+++ b/goals.Rmd
@@ -42,7 +42,7 @@ While ease of writing user code was a key consideration, equally important was t
 
 ```{r plotscaper-design}
 #| echo: false
-#| fig-cap: "A simple example of a default `plotscaper` figure. Note the clean design: I opted for no axis ticks or grid lines, and generally muted auxiliary graphical elements to emphasize the data."
+#| fig-cap: "A simple example of a default `plotscaper` figure. Note the minimalist design: I opted for no axis ticks or grid lines, and generally muted auxiliary graphical elements to emphasize the data."
 include_figure("figures/plotscaper_example1.html")
 ```
 
@@ -50,9 +50,9 @@ A general rule I applied to the design of the user interface `plotscaper` was "l
 
 ## Interactive features
 
-The next important question was which interactive features to support. As was discussed in Section \@ref(background), there are many interactive data visualization features, and some are more useful than others. Furthermore, the amount of time and effort required to implement these features also varies considerably. Therefore, choosing the right set of features to prioritize was a key design consideration.
+The next important question was which interactive features to support. As was discussed in Section \@ref(background), there are many interactive data visualization features, with varying degrees of usefulness and implementation complexity. Therefore, choosing the right set of features to prioritize was a key design consideration.
 
-As was hinted at throughout Section \@ref(background), and particularly in Section \@ref(linked-selection), the key feature to implement was generalized linked selection or brushing. Linked selection is highly desirable because it allows users to quickly explore trends across dynamically-generated subsets of their data, making it one of the most useful tools in interactive data visualization [@buja1996; @heer2012; @wilhelm2003; @wilhelm2008; @wills2008; @ware2019; @ward2015]. However, making a generalized version of linked selection is not trivial. First, all plots need to be able react to user interaction - such as clicking-and-dragging - by detecting which objects are inside the selection region, accumulating the corresponding cases, and dispatching this information as a selection event. Second, the system needs to keep track of which cases are currently selected and react to selection events from the plots by updating and dispatching its own events. Finally, the plots must also react to the events from the system by recomputing all of the necessary summary statistics and re-rendering. Doing this in an a way that is efficient and which generalizes well requires some care.
+As was hinted at throughout Section \@ref(background), and particularly in Section \@ref(linked-selection), the core feature to implement was generalized linked selection or brushing. Linked selection allows the users to quickly explore trends across different dynamically-generated subsets of the data, making it one of the most useful tools in interactive data visualization [@buja1996; @heer2012; @wilhelm2003; @wilhelm2008; @wills2008; @ware2019; @ward2015]. However, implementing generalized linked selection is not trivial. First, all plots need to be able respond to user interaction - such as clicking-and-dragging - by detecting which objects are inside the selection region, finding the corresponding cases, and forwarding this information as a selection event. Second, the system needs to keep track of which cases are currently selected and respond to selection events from the plots by updating and dispatching its own events. Finally, the plots must also react to the events from the system by recomputing all of the necessary summary statistics and re-rendering. Implementing this in an efficient and general manner is not trivial.
 
 Further, as also discussed in Sections \@ref(linked-selection) and \@ref(stacking-part-whole), linked selection also presents some challenges for *displaying* the corresponding information. Naive solutions, like re-rendering the entire plot upon selection, produce unsatisfactory visual behavior, see for example the following quote by Wilhelm:
 
@@ -60,15 +60,15 @@ Further, as also discussed in Sections \@ref(linked-selection) and \@ref(stackin
 >
 > Adalbert @wilhelm2008, Chapter II.9 of the Data Visualization Handbook, pp. 210
 
-Combined, these issues make linked selection a feature that is difficult to simply add on top of an existing static data visualization system. Instead, the feature has to be directly integrated into the data visualization pipeline, or rather, the data visualization pipeline has to be built *around it*. Therefore, during `plotscaper`'s development, developing an efficient and consistent model for linked selection took a significant amount of programming time and effort. 
+Combined, these issues make linked selection difficult to simply *add* on top of an existing static data visualization system. Instead, the feature has to be directly integrated into the data visualization pipeline, or rather, the data visualization pipeline has to be built *around it*. Therefore, during `plotscaper`'s development, developing the architecture for linked selection took up a significant amount of programming time and effort. 
 
-Two other more advanced features I wanted to support were parameter manipulation and representation switching. These features give the user the ability to quickly see alternative views of their data and discover trends that they may otherwise miss (see Sections \@ref(representation-switching)). This makes them highly desirable. Similar to linked selection, these features affect more than just the surface-level graphical attributes of plots, requiring a direct integration in the data visualization pipeline. 
+Two other more advanced features I wanted to support were parameter manipulation and representation switching. These features give the user the ability to quickly see alternative views of their data and discover trends that they may otherwise miss, making them highly desirable (see Sections \@ref(representation-switching)). Further, like linked selection, these features affect more than just the surface-level graphical attributes of plots, requiring a direct integration into the data visualization pipeline. 
 
-Querying was another feature which I deemed desirable. Querying can be highly useful in interactive workflows: upon seeing an interesting visual trend in their data, a user may often be interested in the precise data values that produced that graphic. While this feature is arguably simpler to implement than features like linked selection or parameter manipulation discussed above, there are still some important nuances. For instance, it is important to note that the information the user is interested in are *not* the values of the visual attributes per se, but instead the underlying summary statistics, and these can at times differ. For instance, when querying a stacked barplot, we do not care about the stacked (cumulated) values, but instead about the values corresponding to individual segments. Further, at times, users may find it useful to query statistics which are not directly represented in the graphic (but still relate to the underlying data subset). As such, querying is not a purely graphical operation either, and does require some careful thought.
+Querying was another feature which I deemed desirable. Querying can be highly useful in interactive workflows: upon seeing an interesting visual trend in their data, a user may want to inspect the precise data values underlying the graphic. While this feature is arguably simpler to implement than the previously discussed features, there are still some important nuances. For instance, users are typically *not* interested in the values of the visual attributes of the queried geometric objects, but instead in the original underlying summary statistics, which can at times differ. For instance, when querying a stacked barplot, we do not care about the stacked (accumulated) values, but instead about the values corresponding to individual segments. Further, users may also find it useful to query statistics which are not directly represented in the graphic at all (but are still computed on the corresponding data subset). As such, querying is not a purely graphical operation either, and does require some careful thought.
 
-Another major development goal was communication between the figure (client) and an R session (server). The ability to call functions in an interactive R session to manipulate or query the figure directly can be invaluable in data exploration. However, clearly, compared to static data visualization, this feature requires a live connection for exchanging messages between the server and the client. Further, if we want the figure to not only react to messages, but also be able to send information back, the connection needs to be bi-directional [making the fundamental model that of sockets rather than some unidirectional architecture such as REST, see @fielding2002].
+Another key development goal was inter-process communication between the figure (client) and an R session (server). Specifically, the ability to call functions in an interactive R session to manipulate or query the figure directly can be invaluable for data exploration. Unlike static visualization, this requires additional infrastructure: a running server and a client connection. Furthermore, for the figure to be able to both react to messages from the server and also send some messages of its own back, a bi-directional connection is necessary [i.e. sockets rather than unidirectional architecture such as REST, see @fielding2002].
 
-There were also several beneficial features which were relatively straightforward to implement: changing size and alpha, zooming, and panning. What made these features easier to implement is that they directly manipulate more surface-level attributes of the plot (i.e. scales), without altering earlier stages of the visualization pipeline. Despite their simplicity, these features can still be highly useful in interactive workflows. For example, zooming and panning can help to reveal trends within narrow ranges of the data, while adjustments to size and alpha can mitigate overplotting. Therefore, implementing these features was an easy choice.
+There were also several useful features which were relatively straightforward to implement: changing size and alpha, zooming, and panning. What made these features easier to implement is that they directly manipulate more surface-level attributes of the plot (i.e. scales), without altering earlier stages of the visualization pipeline. Despite their simplicity, these features can still be highly useful in interactive workflows. For example, zooming and panning can help to reveal trends within narrow ranges of the data, while adjustments to size and alpha can mitigate overplotting. Therefore, implementing these features was an easy choice.
 
 Finally, there were also several interactive features discussed in Section \@ref(common-features) which I choose not to implement, including selection operators, semantic zooming, and grand tours (and animation in general). The primary reason for this was that these features are quite advanced and specialized, making them better suited to dedicated packages rather than general interactive data visualization frameworks. There were also some more feature-specific reasons. For instance, while selection operators (ability to combine selections with logical operators such as AND, OR, or XOR, and chain sequences of these operations) can be a powerful tool for more advanced users, its utility for novices is debatable. Specifically, in line with @wills2000, who argued that selection systems should be simple, powerful, and forgiving, I opted for a simple transient/persistent selection model. Similarly, semantic zooming, while also powerful in specific contexts, did not seem worth the effort since it is limited to only a certain number of plot types such as maps. Finally, grand tours and animation also seemed to be beyond the scope of the package.
 
