--- a/_main.Rmd
+++ b/_main.Rmd
@@ -1171,7 +1171,7 @@ Regular plot is a plot where the geometric objects within one layer represent a 
 
 #### The graph behind the graph
 
-To summarize the main point of this entire section, *graphs are graphs*. As a bit of a playful side-note, this view is not shared by everyone. Particularly, the poster of the following meme shared on the Mathematical Mathematics Memes Facebook group [@mathematicalmathematics2024] might not agree:
+To summarize the main point of this entire section, *graphs are graphs*. As a bit of a playful side-note, this view is not shared by everyone, as evidenced by a meme shared on the Mathematical Mathematics Memes Facebook group [@mathematicalmathematics2024], see Figure \@ref(fig:meme).
 
 (ref:mathematical) [@mathematicalmathematics2024]
 
@@ -1385,7 +1385,7 @@ For example, the following is a diagram of a simple category with two objects an
 
 ```{r category-two1}
 #| echo: false
-#| out-width: "75%"
+#| out-width: "60%"
 #| fig-cap: "A category with two objects."
 knitr::include_graphics("./figures/category-two.png")
 ```
@@ -1443,7 +1443,7 @@ This second property of preserving composition can be described by the following
 ```{r functor}
 #| echo: false
 #| fig-cap: "A commutative diagram showing how a functor $F$ preserves associativity. $A$, $B$, $C$ are objects in category $\\mathcal{C}$, $F(A)$, $F(B)$, $F(C)$ are objects in category $\\mathcal{D}$, $f$ and $g$ are morphisms in $\\mathcal{C}$, and $F(F)$ and $F(g)$ are objects in $\\mathcal{D}$."
-#| out-width: "75%"
+#| out-width: "60%"
 knitr::include_graphics("./figures/functor.png")
 ```
 
@@ -4663,7 +4663,11 @@ Regarding summary statistics, while many common operators such as sums, averages
 
 #### Idempotence, unitality, and distributivity
 
-Finally, there are few other properties of set union which, in my view, are less important but which it may be useful to briefly touch on here. The first is idempotence. Given any set $A$, the union of that set with itself is itself, $A \cup A = A$. While some statistical operators, such as minimum, maximum, and convex hull, exhibit this property, I have not identified a specific use case for it in graphics, interactive or otherwise. Second, just as the monoidal neutral element corresponds to the empty set ($\varnothing$, such that $A \cup \varnothing = A$), there may also be a so-called terminal element or object [see e.g. @fong2019] that behaves like the universal set $\Omega$ under union, such that $A \cup \Omega = \Omega$. For instance, in the case of sums, products, or maximums, our data may contain special $\infty$ or `Inf` value, which, when combined with any other value, is always yielded back: $x + \infty = x \cdot \infty = \max(x, \infty) = \infty$ for all $x$. Similarly, the special missing value `NA` in R also behaves somewhat like the terminal element for many operations^[Although going by precise category-theoretic definitions, introducing missing values or `NA`'s does create some problems: by definition, the terminal element is always unique, so `NA` and `Inf` would either have to be isomorphic (both be *the* terminal object), or only one of them could be (based on R's implementation, this would have to be `NA` since e.g. `NA * Inf == NA`).]. The terminal element could hypothetically be useful for more efficient aggregation, due to the fact that, once we encounter it, we can terminate the aggregation loop. However, I have not been able to think of any examples, beyond trivial ones^[E.g. logical conjunction and disjuction with $\text{FALSE}$ and $\text{TRUE}$], where the terminal element would be easily and generally representable by graphics (for instance, how do we represent a bar of height $\infty$?). As such, the practical utility of this hypothetical optimization is debatable^[Further, checking for the terminal element would require adding a branching (`if`) statement inside the body of the aggregation loop. In performance-critical code sections, branching can introduce performance bottlenecks, especially when the branching condition is hard to predict [see e.g. @fabian2018]. Although terminal values may occur infrequently (a data set may not have any), making branching fairly predictable, it may still be more efficient, on balance, to simply aggregate over all data, even if it includes terminal values.]. Lastly, set union distributes over set intersection. However, the relation of set intersection to the part-whole object model is not clear, particularly when the parts are disjoint subsets. An analogue to set intersection would require that the summary statistic has a complementary binary operation, distinct from an inverse (which is identified with set difference, see \@ref(discussion-groups-inverses)), which would need to distribute over the primary aggregation operation. Furthermore, unlike inverses and neutral elements, this complementary distributive operation does not need to be unique (for instance, maximum distributes over both products and minimums). As such, I do not really see a benefit in identifying such operations.
+Finally, there are few other properties of set union which, in my view, are less important but which it may be useful to briefly touch on here. The first is idempotence. Given any set $A$, the union of that set with itself is itself, $A \cup A = A$. While some statistical operators, such as minimum, maximum, and convex hull, exhibit this property, I have not identified a specific use case for it in graphics, interactive or otherwise. 
+
+Second, just as the monoidal neutral element corresponds to the empty set ($\varnothing$, such that $A \cup \varnothing = A$), there may also be a so-called terminal element or object [see e.g. @fong2019] that behaves like the universal set $\Omega$ under union, such that $A \cup \Omega = \Omega$. For instance, in the case of sums, products, or maximums, our data may contain special $\infty$ or `Inf` value, which, when combined with any other value, is always yielded back: $x + \infty = x \cdot \infty = \max(x, \infty) = \infty$ for all $x$. Similarly, the special missing value `NA` in R also behaves somewhat like the terminal element for many operations^[Although going by precise category-theoretic definitions, introducing missing values or `NA`'s does create some problems: by definition, the terminal element is always unique, so `NA` and `Inf` would either have to be isomorphic (both be *the* terminal object), or only one of them could be (based on R's implementation, this would have to be `NA` since e.g. `NA * Inf == NA`).]. The terminal element could hypothetically be useful for more efficient aggregation, due to the fact that, once we encounter it, we can terminate the aggregation loop. However, I have not been able to think of any examples, beyond trivial ones^[E.g. logical conjunction and disjuction with $\text{FALSE}$ and $\text{TRUE}$], where the terminal element would be easily and generally representable by graphics (for instance, how do we represent a bar of height $\infty$?). As such, the practical utility of this hypothetical optimization is debatable^[Further, checking for the terminal element would require adding a branching (`if`) statement inside the body of the aggregation loop. In performance-critical code sections, branching can introduce performance bottlenecks, especially when the branching condition is hard to predict [see e.g. @fabian2018]. Although terminal values may occur infrequently (a data set may not have any), making branching fairly predictable, it may still be more efficient, on balance, to simply aggregate over all data, even if it includes terminal values.]. 
+
+Lastly, set union distributes over set intersection. However, the relation of set intersection to the part-whole object model is not clear, particularly when the parts are disjoint subsets. An analogue to set intersection would require that the summary statistic has a complementary binary operation, distinct from an inverse (which is identified with set difference, see \@ref(discussion-groups-inverses)), which would need to distribute over the primary aggregation operation. Furthermore, unlike inverses and neutral elements, this complementary distributive operation does not need to be unique (for instance, maximum distributes over both products and minimums). As such, I do not really see a benefit in identifying such operations.
 
 ### Model constraints
 
@@ -4693,7 +4697,13 @@ Currently, `plotscaper` offers a robust set of features for creating and manipul
 
 In the current version, `plotscaper` offers six plot types: scatterplots, barplots, histograms, fluctuation diagrams, histograms, two-dimensional histograms, and parallel coordinate plots. Additionally, normalized representations, such as spineplots and spinograms, are available for all aggregate plots (and also parallel coordinate plots). While these six plot types can already be used to create a wide range of useful interactive figures, there are numerous other plots which could be highly useful in applied data analysis. Density plots, radar plots, mosaic plots, and maps, for example, should be compatible with the `plotscaper` model and could be potential additions in future versions of the package. Furthermore, a relatively simple addition which could be useful would be horizontal barplots. 
 
-Finally, in the current version of the system, all plots are specified nominally^[Meaning that, for instance, to add a scatterplot, we call the `add_scatterplot` function]. While a full declarative plot specification in R would be appealing, implementing such a system has presented challenges, and the issue will be discussed in more depth in Section \@ref(declarative-schemas). This somewhat limits the package's extensibility, however, users familiar with TypeScript can still create arbitrary new plot types using `plotscape` code.
+Finally, in the current version of the system, all plots are specified nominally^[Meaning that, for instance, to add a scatterplot, we call the `add_scatterplot` function.]. While a full declarative plot specification in R would be appealing, implementing such a system has presented challenges, and the issue will be discussed in more depth in Section \@ref(declarative-schemas). This somewhat limits the package's extensibility, however, users familiar with TypeScript can still create arbitrary new plot types using `plotscape` code.
+
+#### Consistency
+
+A major advantage of `plotscaper` is that all plots fully support linked selection. Specifically, in any plot, the users can click or click-and-drag to select geometric objects, and the resulting cases are then highlighted across all the other plots. Furthermore, for aggregate types of plots, users can specify their own aggregation functions (`Reducers`), will result in well-defined behavior under linked selection, provided that they fulfill the monoidal contract.
+
+This consistency is highly useful because it reduces cognitive load. The users do not have to learn which plots support selection and which only display it - instead, all plots behave in the same, predictable manner. Further, the guarantees offered by part-whole relationships (see Section \@ref(stacking-part-whole)) prevent undesirable visual behaviors, such as rapidly changing axis limits. Overall, this arguably leads to a smoother, more "natural" user experience.
 
 #### Selection model
 
